@@ -7,11 +7,11 @@ import com.rest.watchrestservice.service.CustomerService;
 import com.rest.watchrestservice.service.WatchService;
 import com.rest.watchrestservice.serviceImpl.CustomerServiceImpl;
 import com.rest.watchrestservice.serviceImpl.WatchServiceImpl;
-import org.hamcrest.CoreMatchers;
+
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
-import org.mockito.internal.matchers.Equals;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -25,7 +25,7 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.CoreMatchers.is;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -54,7 +54,7 @@ public class HomeControllerTest {
 
     @Test
     void testGetWatchById() throws Exception {
-        Watch testWatch = watchServiceImpl.listWatches().get(0);
+        Watch testWatch = watchServiceImpl.listWatches().getFirst();
 
         given(watchService.getWatchById(testWatch.getId())).willReturn(testWatch);
 
@@ -62,12 +62,11 @@ public class HomeControllerTest {
                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.id", is(testWatch.getId().toString())))
+                .andExpect(jsonPath("$.id", is(testWatch.getId())))
                 .andExpect(jsonPath("$.model", is(testWatch.getModel())))
                 .andExpect(jsonPath("$.price", is(testWatch.getPrice())))
                 .andExpect(jsonPath("$.origin", is(testWatch.getOrigin())))
-                .andExpect(jsonPath("$.serialNumber", is(testWatch.getSerialNumber())))
-                .andExpect(jsonPath("$.addedAt", is(testWatch.getAddedAt().toString())));
+                .andExpect(jsonPath("$.serialNumber", is(testWatch.getSerialNumber())));
     }
 
     @Test
@@ -86,11 +85,10 @@ public class HomeControllerTest {
     @Test
     void testCreateWatch() throws Exception {
         Watch testWatch = Watch.builder()
-                .id(UUID.randomUUID())
+                .id(UUID.randomUUID().toString())
                 .model("Rolex")
                 .serialNumber("1321564")
                 .price(15000.0)
-                .addedAt(LocalDateTime.now())
                 .build();
 
         given(watchService.addWatch(testWatch)).willReturn(testWatch);
@@ -101,17 +99,16 @@ public class HomeControllerTest {
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
                 .andExpect(header().exists("location"))
-                .andExpect(jsonPath("$.id",is(testWatch.getId().toString())))
+                .andExpect(jsonPath("$.id",is(testWatch.getId())))
                 .andExpect(jsonPath("$.model",is(testWatch.getModel())))
                 .andExpect(jsonPath("$.serialNumber",is(testWatch.getSerialNumber())))
                 .andExpect(jsonPath("$.origin",is(testWatch.getOrigin())))
-                .andExpect(jsonPath("$.price",is(testWatch.getPrice())))
-                .andExpect(jsonPath("$.addedAt",is(testWatch.getAddedAt().toString())));
+                .andExpect(jsonPath("$.price",is(testWatch.getPrice())));
     }
 
     @Test
     void testUpdateWatch() throws Exception {
-        Watch testWatch = watchServiceImpl.listWatches().get(0);
+        Watch testWatch = watchServiceImpl.listWatches().getFirst();
 
         given(watchService.updateById(testWatch.getId(),testWatch)).willReturn(testWatch);
 
@@ -121,32 +118,31 @@ public class HomeControllerTest {
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(header().exists("location"))
-                .andExpect(jsonPath("$.id",is(testWatch.getId().toString())))
+                .andExpect(jsonPath("$.id",is(testWatch.getId())))
                 .andExpect(jsonPath("$.model",is(testWatch.getModel())))
                 .andExpect(jsonPath("$.serialNumber",is(testWatch.getSerialNumber())))
                 .andExpect(jsonPath("$.origin",is(testWatch.getOrigin())))
-                .andExpect(jsonPath("$.price",is(testWatch.getPrice())))
-                .andExpect(jsonPath("$.addedAt",is(testWatch.getAddedAt().toString())));
+                .andExpect(jsonPath("$.price",is(testWatch.getPrice())));
 
-                verify(watchService).updateById(any(UUID.class),any(Watch.class));
+                verify(watchService).updateById(any(UUID.class).toString(),any(Watch.class));
     }
 
     @Test
     void testDeleteWatch() throws Exception {
-        Watch testWatch = watchServiceImpl.listWatches().get(0);
+        Watch testWatch = watchServiceImpl.listWatches().getFirst();
 
         mockMvc.perform(delete(HomeController.WATCH_PATH_ID,testWatch.getId())
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
-        verify(watchService).deleteById(uuidArgumentCaptor.capture());
+        verify(watchService).deleteById(uuidArgumentCaptor.capture().toString());
 
-        assertThat(testWatch.getId()).isEqualTo(uuidArgumentCaptor.getValue());
+        assertThat(testWatch.getId()).isEqualTo(uuidArgumentCaptor.getValue().toString());
     }
 
     @Test
     void testGetCustomerById() throws Exception {
-        Customer testCustomer = customerServiceImpl.listCustomers().get(0);
+        Customer testCustomer = customerServiceImpl.listCustomers().getFirst();
 
         given(customerService.getCustomerById(testCustomer.getId())).willReturn(testCustomer);
 
@@ -154,7 +150,7 @@ public class HomeControllerTest {
                 .accept(MediaType.APPLICATION_JSON))
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id",is(testCustomer.getId().toString())))
+                .andExpect(jsonPath("$.id",is(testCustomer.getId())))
                 .andExpect(jsonPath("$.name",is(testCustomer.getName())))
                 .andExpect(jsonPath("$.version",is(testCustomer.getVersion())))
                 .andExpect(jsonPath("$.addedAt",is(testCustomer.getAddedAt().toString())));
@@ -176,7 +172,7 @@ public class HomeControllerTest {
     @Test
     void testCreateCustomer() throws Exception {
         Customer testCustomer = Customer.builder()
-                .id(UUID.randomUUID())
+                .id(UUID.randomUUID().toString())
                 .name("Mohamed Ali")
                 .version(5)
                 .addedAt(LocalDateTime.now())
@@ -189,7 +185,7 @@ public class HomeControllerTest {
                 .content(objectMapper.writeValueAsString(testCustomer)))
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id",is(testCustomer.getId().toString())))
+                .andExpect(jsonPath("$.id",is(testCustomer.getId())))
                 .andExpect(jsonPath("$.name",is(testCustomer.getName())))
                 .andExpect(jsonPath("$.version",is(testCustomer.getVersion())))
                 .andExpect(jsonPath("$.addedAt",is(testCustomer.getAddedAt().toString())));
@@ -197,7 +193,7 @@ public class HomeControllerTest {
 
     @Test
     void testUpdateCustomer() throws Exception {
-        Customer testCustomer = customerServiceImpl.listCustomers().get(0);
+        Customer testCustomer = customerServiceImpl.listCustomers().getFirst();
 
         given(customerService.updateById(testCustomer.getId(),testCustomer)).willReturn(testCustomer);
 
@@ -206,24 +202,24 @@ public class HomeControllerTest {
                         .content(objectMapper.writeValueAsString(testCustomer)))
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id",is(testCustomer.getId().toString())))
+                .andExpect(jsonPath("$.id",is(testCustomer.getId())))
                 .andExpect(jsonPath("$.name",is(testCustomer.getName())))
                 .andExpect(jsonPath("$.version",is(testCustomer.getVersion())))
                 .andExpect(jsonPath("$.addedAt",is(testCustomer.getAddedAt().toString())));
 
-        verify(customerService).updateById(any(UUID.class),any(Customer.class));
+        verify(customerService).updateById(any(UUID.class).toString(),any(Customer.class));
     }
 
     @Test
     void testDeleteCustomer() throws Exception {
-        Customer testCustomer = customerServiceImpl.listCustomers().get(0);
+        Customer testCustomer = customerServiceImpl.listCustomers().getFirst();
 
         mockMvc.perform(delete(HomeController.CUSTOMER_PATH_ID,testCustomer.getId())
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk());
 
-        verify(customerService).deleteById(uuidArgumentCaptor.capture());
+        verify(customerService).deleteById(uuidArgumentCaptor.capture().toString());
 
-        assertThat(testCustomer.getId()).isEqualTo(uuidArgumentCaptor.getValue());
+        assertThat(testCustomer.getId()).isEqualTo(uuidArgumentCaptor.getValue().toString());
     }
 }
